--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pandas = "^1.3.0"
 jupyterlab = "^3.0.16"
 seaborn = "^0.11.1"
 tqdm = "^4.61.2"
+psutil = "^5.8.0"
 
 [tool.poetry.dev-dependencies]
 
