--- a/gs/CMakeLists.txt
+++ b/gs/CMakeLists.txt
@@ -42,3 +42,6 @@ target_link_libraries(${PROJECT_NAME} PRIVATE ${Boost_LIBRARIES})
 
 find_package(LAPACK REQUIRED)
 target_link_libraries(${PROJECT_NAME} PRIVATE -llapack)
+
+find_package(OpenMP REQUIRED)
+target_link_libraries(${PROJECT_NAME} PRIVATE OpenMP::OpenMP_CXX)
