Now able to compile sketch.cpp.

--- a/rp/Makefile
+++ b/rp/Makefile
@@ -1,4 +1,4 @@
 build:
 	@echo "==== Building rp ===="
 	mkdir -p bin/
-	gcc -std=c++17 -o bin/rp.exe sketch.cpp
+	g++ -std=c++17 -o bin/rp.exe sketch.cpp
