--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ seaborn = "^0.11.1"
 tqdm = "^4.61.2"
 psutil = "^5.8.0"
 scipy = "^1.7.0"
+tables = "^3.6.1"
+h5py = "^3.3.0"
 
 [tool.poetry.dev-dependencies]
 
