--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ tables = "^3.6.1"
 h5py = "^3.3.0"
 numba = "^0.54.0"
 kmeans1d = "^0.3.1"
+opencv-python = "4.4.0.46"
 
 [tool.poetry.dev-dependencies]
 
