Add Robin Hood library to the RP project.

--- a/rp/Makefile
+++ b/rp/Makefile
@@ -1,4 +1,4 @@
 build:
 	@echo "==== Building rp ===="
 	mkdir -p bin/
-	g++ -std=c++17 -o bin/rp.exe sketch.cpp -lboost_iostreams
+	g++ -std=c++17 -o bin/rp.exe sketch.cpp robin_hood.h stop_watch.h -lboost_iostreams
