--- a/rp/Makefile
+++ b/rp/Makefile
@@ -1,4 +1,4 @@
 build:
 	@echo "==== Building rp ===="
 	mkdir -p bin/
-	g++ -std=c++17 -o bin/rp.exe main.cpp matrices.h random_engine.h robin_hood.h stop_watch.h sketches.h parsers.h -lboost_iostreams
+	g++ -ggdb -pedantic -Wall -std=c++17 -o bin/rp.exe main.cpp matrices.h random_engine.h robin_hood.h stop_watch.h sketches.h parsers.h -lboost_iostreams
