--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ h5py = "^3.3.0"
 numba = "^0.54.0"
 kmeans1d = "^0.3.1"
 opencv-python = "4.4.0.46"
+openpyxl = "^3.0.9"
 
 [tool.poetry.dev-dependencies]
 
