--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ numba = "^0.54.0"
 kmeans1d = "^0.3.1"
 opencv-python = "4.4.0.46"
 openpyxl = "^3.0.9"
+joblib = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 
