--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ kmeans1d = "^0.3.1"
 opencv-python = "4.4.0.46"
 openpyxl = "^3.0.9"
 joblib = "^1.1.0"
+PuLP = "^2.6.0"
 
 [tool.poetry.dev-dependencies]
 
