--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ joblib = "^1.1.0"
 PuLP = "^2.6.0"
 
 [tool.poetry.dev-dependencies]
+ipywidgets = "^7.7.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
